--- a/searchResults/searchResults.html
+++ b/searchResults/searchResults.html
@@ -26,7 +26,7 @@
             </div>
             <div class="s-num">
                 搜索“{{search_wd}}”,一共有
-                <span style="color: #c20c0c">{{tab_num}}</span>
+                <span style="color: #c20c0c">{{total}}</span>
                 {{current_tab}}
             </div>
             <div class="tab">
@@ -39,7 +39,7 @@
                                 style="width: 100%">
                             <el-table-column
                                     type="index"
-                                    width="40">
+                                    width="60">
                             </el-table-column>
                             <el-table-column label="操作"
                                              width="100">
@@ -50,7 +50,7 @@
                             </el-table-column>
                             <el-table-column
                                     label="歌曲名"
-                                    width="180">
+                                    width="220">
                                 <template slot-scope="scope">
                                     <a v-bind:href="'../musicDetail/musicDetail.html?id='+scope.row.id">{{scope.row.title}}</a>
                                 </template>
@@ -58,11 +58,11 @@
                             <el-table-column
                                     prop="duration"
                                     label="时长"
-                                    width="80">
+                                    width="100">
                             </el-table-column>
                             <el-table-column
                                     label="专辑"
-                                    width="160">
+                                    width="180">
                                 <template slot-scope="scope">
                                     <a v-bind:href="'../detail/detail.html?type=album&id='+scope.row.album.id">{{scope.row.album.name}}</a>
                                 </template>
@@ -159,9 +159,9 @@
                                 background
                                 @current-change="handleCurrentChange"
                                 :current-page.sync="current_page"
-                                :page-size="10"
+                                :page-size="limit"
                                 layout="prev, pager, next"
-                                :total="100">
+                                :total="total">
                         </el-pagination>
                     </div>
                 </el-tabs>
