index页面访问后台大致完成

--- a/index/index.html
+++ b/index/index.html
@@ -194,15 +194,15 @@
                     </div>
                 </div>
                 <div class="hot-singer">
-                    <h4><i class="el-icon-arrow-right"></i>歌手排行榜</h4>
+                    <h4><i class="el-icon-arrow-right"></i>歌曲排行榜</h4>
                     <div class="hot-singer-content">
-                        <div class="singer-item" v-for="singer in hot_singer">
+                        <div class="singer-item" v-for="song in hot_song">
                             <div class="singer-img">
-                                <img v-bind:src="singer.img_url" style="width: 62px;height: 62px;" alt="">
+                                <img v-bind:src="song.img_url" style="width: 62px;height: 62px;" alt="">
                             </div>
                             <div class="singer-info-wrap">
-                                <div class="singer-name">{{singer.name}}</div>
-                                <div class="singer-info">{{fomatString(singer.info,16)}}</div>
+                                <div class="singer-name">{{song.title}}</div>
+                                <div class="singer-info">{{fomatString(song.singer,16)}}</div>
                             </div>
 
                         </div>
