--- a/homePage/homePage.html
+++ b/homePage/homePage.html
@@ -21,7 +21,7 @@
                      background-color="#333" active-text-color="#ffffff">
                 <div class="nav-content">
                     <div class="nav-logo">
-                        <div>带音乐平台</div>
+                        <a href="../index/index.html">带音乐平台</a>
                     </div>
                     <el-menu-item index="1" class="nav-item">发现音乐</el-menu-item>
                     <el-menu-item index="2" class="nav-item">我的音乐</el-menu-item>
