--- a/singerDetail/singerDetail.html
+++ b/singerDetail/singerDetail.html
@@ -23,7 +23,7 @@
                  background-color="#333" active-text-color="#ffffff">
             <div class="nav-content">
                 <div class="nav-logo">
-                    <div>带音乐平台</div>
+                    <a href="../index/index.html">带音乐平台</a>
                 </div>
 
                 <el-menu-item index="1" class="nav-item">发现音乐</el-menu-item>
